tests/invalids/invalidIf2.gt
proc main ()
    int m;
begin
    if m > n then
        a := n;
    
end
